--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
             <p>Ingresa a tu cuenta</p>
         </div>
 
-        <form action="#" method="POST">
+        <form action="cLogin.php" method="POST">
             
             <div class="campo-formulario">
                 <label for="correo">Correo Electrónico</label>
