--- a/login.html
+++ b/login.html
@@ -116,14 +116,10 @@
 
             <div class="campo-formulario">
                 <label for="contrasena">Contraseña</label>
-                <input type="password" id="contrasena" name="contrasena" placeholder="********" required>
+                <input type="text" id="contrasena" name="contrasena" placeholder="********" required>
             </div>
 
             <button type="submit" class="boton-ingresar">Iniciar Sesión</button>
-
-            <div class="enlaces-extra">
-                <a href="#">¿Olvidaste tu contraseña?</a>
-            </div>
         </form>
     </div>
 
